@@ -34,6 +34,7 @@ Version 1.0.4 to be released
 - New: Added CHtml::beginForm and endForm (Qiang)
 - New: Added CApplication::preinit (Qiang)
 - New: Added 'controllers' option to access control (Qiang)
+- New: Added module-level filter support (Qiang)
 
 
 Version 1.0.3 March 1, 2009
